Update css file

--- a/web-compatibility.html
+++ b/web-compatibility.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<!-- <link rel="stylesheet" href="reset.css" /> -->
+<!-- <link rel="stylesheet" href="asset/css/reset.css" /> -->
 <style>
   h1 {
     background-color: orange;
