Added google fonts

--- a/bestpractices.html
+++ b/bestpractices.html
@@ -8,14 +8,22 @@
 
 <style>
   @import url('https://fonts.googleapis.com/css2?family=Libre+Baskerville:ital,wght@0,400;0,700;1,400&family=Maven+Pro&display=swap');
-  h1{
+  @import url('https://fonts.googleapis.com/css2?family=Dancing+Script&family=Libre+Baskerville:ital,wght@0,400;0,700;1,400&family=Maven+Pro&display=swap');
+
+  h1 {
     font-family: 'Libre Baskerville', serif;
   }
-  h2{
-    font-family: 'Libre Baskerville', serif;
+
+  h2 {
     font-family: 'Maven Pro', sans-serif;
   }
+
+  p {
+    font-family: 'Dancing Script', cursive;
+    font-size: 20px;
+  }
 </style>
+
 <head>
   <title>Layout 1</title>
 </head>
@@ -23,13 +31,25 @@
 <body>
   <!-- font-awesome -->
 
-  <h1> Best Practices</h1> <hr />
+  <h1> Best Practices</h1>
+  <hr />
   <h2> Fontawesome</h2>
   <i class="fa fa-camera"></i>
   <i class="fa fa-car"></i>
   <i class="fa fa-envelope"></i>
 
+  <div>
+    <a href="">
+      <img src="asset/images/facebook.png" alt="facebook" width="20" height="20">
+    </a>
+  </div>
+
   <h2> Google Fonts </h2>
+  <p>
+    Lorem ipsum dolor sit, amet consectetur adipisicing elit. Officia, officiis. Tempore consectetur, autem sapiente
+    veniam aliquid doloremque, ducimus perspiciatis, nemo deleniti recusandae doloribus earum amet perferendis
+    consequatur? Quasi, cum ducimus!
+  </p>
 
 </body>
 
