--- a/best-practices.html
+++ b/best-practices.html
@@ -1,5 +1,9 @@
 <!DOCTYPE html>
 <html>
+<link rel="icon" type="image/png" href="https://sabitaneupane.github.io/asset/images/favicon.png">
+<meta name="description" content="Basic Frontend Training">
+<meta name="keywords" content="HTML, CSS, JavaScript">
+<meta name="author" content="Sabita Neupane">
 <!-- font-awesome -->
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
@@ -31,7 +35,7 @@
 <body>
   <!-- font-awesome -->
 
-  <h1> Best Practices</h1>
+  <h1> Best Practices for Frontend Development</h1>
   <hr />
   <h2> Fontawesome</h2>
   <i class="fa fa-camera"></i>
@@ -99,7 +103,7 @@
   </code>
 </pre>
 
- - Use ID and class names that are as short as possible but as long as necessary.
+  - Use ID and class names that are as short as possible but as long as necessary.
   <pre>
     <code>
       /* Not recommended */
@@ -126,6 +130,27 @@
       .ads-sample {}
     </code>
   </pre>
+
+  <h2>Some Useful Browser Extension</h2>
+  <ul>
+    <li> ColorZilla</li>
+    <li> Wappalyzer </li>
+    <li> Window Resizer</li>
+    <li> Web Developer</li>
+    <li> Full Page Screen Capture</li>
+  </ul>
+
+  <h2> SEO for developer</h2>
+
+  <ul>
+    <li>Make sure to use high quality images</li>
+    <li>Compress images before using</li>
+    <li>Use single asset file instead of multiple</li>
+    <li>Use h1 tag only once throughout the single page</li>
+    <li>Never forget to use alt attribute in img tag</li>
+    <li>Use favicon and page title</li>
+    <li>Make use of meta tags</li>
+  </ul>
 </body>
 
 </html>
