Adding JS courses

--- a/html-css/best-practices.html
+++ b/html-css/best-practices.html
@@ -6,26 +6,12 @@
 <meta name="author" content="Sabita Neupane">
 <!-- font-awesome -->
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+<link href="https://fonts.googleapis.com/css2?family=Sora:wght@100&display=swap" rel="stylesheet">
 
 <!-- Google fonts -->
-<link href="https://fonts.googleapis.com/css2?family=Libre+Baskerville&display=swap" rel="stylesheet">
 
 <style>
-  @import url('https://fonts.googleapis.com/css2?family=Libre+Baskerville:ital,wght@0,400;0,700;1,400&family=Maven+Pro&display=swap');
-  @import url('https://fonts.googleapis.com/css2?family=Dancing+Script&family=Libre+Baskerville:ital,wght@0,400;0,700;1,400&family=Maven+Pro&display=swap');
 
-  h1 {
-    font-family: 'Libre Baskerville', serif;
-  }
-
-  h2 {
-    font-family: 'Maven Pro', sans-serif;
-  }
-
-  p {
-    font-family: 'Dancing Script', cursive;
-    font-size: 20px;
-  }
 </style>
 
 <head>
@@ -41,10 +27,12 @@
   <i class="fa fa-camera"></i>
   <i class="fa fa-car"></i>
   <i class="fa fa-envelope"></i>
+  <i class="fa fa-arrow-right"></i>
 
   <div>
     <a href="">
-      <img src="asset/images/facebook.png" alt="facebook" width="20" height="20">
+      <i class="fa fa-facebook-square"></i>
+      <i class="fa fa-twitter-square"></i>
     </a>
   </div>
 
