Add JS Math and Date object

--- a/javascript/index.html
+++ b/javascript/index.html
@@ -3,9 +3,10 @@
 
 <head>
   <meta charset="utf-8">
-  <title>JavaScript current day and time</title>
+  <title>JavaScript Courses</title>
 </head>
 
 <body></body>
-<script src="./asset/js/time.js"> </script>
+<!-- <script src="./asset/js/time.js"> </script> -->
+<script src="./asset/js/area-of-traingle.js"> </script>
 </html>
