--- a/javascript/index.html
+++ b/javascript/index.html
@@ -6,7 +6,14 @@
   <title>JavaScript Courses</title>
 </head>
 
-<body></body>
+<body onload=onloadFunction()>
+  <button onclick=handleOnClick()> Click me</button>
+
+</body>
+
 <!-- <script src="./asset/js/time.js"> </script> -->
-<script src="./asset/js/area-of-traingle.js"> </script>
+<!-- <script src="./asset/js/area-of-traingle.js"> </script> -->
+<!-- <script src="./asset/js/can-vote.js"> </script> -->
+<!-- <script src="./asset/js/event-handler.js"> </script> -->
+
 </html>
