--- a/javascript/slider.html
+++ b/javascript/slider.html
@@ -24,30 +24,45 @@
     'https://cdn2.thecatapi.com/images/xlHchdin5.jpg'
   ]
   var imageLength = imageList.length;
-  document.getElementById("previous-btn").disabled = true;
+  var catImages = document.getElementById("cat-images");
+  var previousBtn = document.getElementById("previous-btn");
+  var nextBtn = document.getElementById("next-btn");
+  previousBtn.disabled = true;
+
+  // function previous() {
+  //   index--;
+  //   catImages.src = imageList[index];
+  //   previousBtn.disabled = false;
+  //   nextBtn.disabled = false;
+  //   if (index === 0) {
+  //     nextBtn.disabled = false;
+  //     previousBtn.disabled = true;
+  //   }
+  // }
+
+  // function next() {
+  //   index++;
+  //   catImages.src = imageList[index];
+  //   previousBtn.disabled = false;
+  //   nextBtn.disabled = false;
+  //   if (index === imageLength - 1) {
+  //     nextBtn.disabled = true;
+  //     previousBtn.disabled = false;
+  //   }
+  // }
 
   function previous() {
-    if (index === 0) {
-      document.getElementById("previous-btn").disabled = true;
-      document.getElementById("next-btn").disabled = false;
-    } else {
-      index--;
-      document.getElementById("cat-images").src = imageList[index];
-      document.getElementById("previous-btn").disabled = false;
-      document.getElementById("next-btn").disabled = false;
-    }
+    index--;
+    catImages.src = imageList[index];
+    previousBtn.disabled = index === 0 ? true : false;
+    nextBtn.disabled = false;
   }
 
   function next() {
-    if (index === imageLength - 1) {
-      document.getElementById("next-btn").disabled = true;
-      document.getElementById("previous-btn").disabled = false;
-    } else {
-      index++;
-      document.getElementById("cat-images").src = imageList[index];
-      document.getElementById("previous-btn").disabled = false;
-      document.getElementById("next-btn").disabled = false;
-    }
+    index++;
+    catImages.src = imageList[index];
+    previousBtn.disabled = false;
+    nextBtn.disabled = index === imageLength - 1 ? true : false;
   }
 
 </script>
