--- a/javascript/calculator.html
+++ b/javascript/calculator.html
@@ -17,10 +17,18 @@
 </head>
 
 <body>
-  Value: 20, 5
   <div id="calculator-value" class="calculator-value">
 
   </div>
+
+  <label>
+    Number 1: <input type="number" id="num1" />
+  </label>
+  <br />
+  <label>
+    Number 2: <input type="number" id="num2" />
+  </label>
+
   <br />
   <button onclick="calculate('+')">+</button>
   <button onclick="calculate('-')">-</button>
